# yahfin

./: .gitignore  README.md  d.csv  endpoints.txt  engines.py  functions.py  msft.csv  multi.csv  ok.csv  okok.csv  okokok.csv  pyproject.toml  setup.py  utils.py  yahfin.py
tests/: speed_test.py  streamlit.py  unittest.py
yahfin/: engines.py  functions.py  streamlit.py  test.py  yahfin.py
yahfin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yahfin/tests/: unittest.py
